test(ConvertTest): String 배열을 Integer 배열로 변환하는 테스트
- 성공하는 경우
- null 입력받았을 때, 0 반환해야 하는 경우
- 문자가 포함된 경우 예외를 던져야 한다
- 음수가 포함된 경우 예외를 던져야 한다